@@ -485,7 +485,7 @@ input[type=checkbox]:checked:before {
 .button-small {
     padding: 0 0.8em;
     height: 2em;
-    font-size: 0.85em;
+    font-size: 0.95em;
 }
 
     .button-secondary {
