@@ -51,11 +51,14 @@ $submenu-color: darken($color-grey-1, 5%);
         -webkit-font-smoothing: auto;
         text-decoration: none;
         display: block;
-        color: #aaa;
+        color: $color-menu-text;
         padding: 0.8em 1.7em;
-        font-size: 0.95em;
-        font-weight: 300;
-
+        font-size: 1em;
+        font-weight: normal;
+        // Note, font-weights lower than normal,
+        // and font-size smaller than 1em (80% ~= 12.8px),
+        // makes the strokes thinner than 1px on non-retina screens
+        // making the text semi-transparent
         &:hover,
         &:focus {
             outline: none;
@@ -83,7 +86,7 @@ $submenu-color: darken($color-grey-1, 5%);
             position: absolute;
             right: 0.5em;
             top: 0.5em;
-            margin-top: 0.15em;
+            margin-top: 0;
         }
 
     }
@@ -146,7 +149,7 @@ $submenu-color: darken($color-grey-1, 5%);
 .explorer {
     // position: absolute;
     // margin-top: 70px;
-    font-size: 0.95em;
+    font-size: 1em;
 }
 
 .nav-search {
@@ -169,7 +172,7 @@ $submenu-color: darken($color-grey-1, 5%);
         cursor: pointer;
         border: 1px solid darken($color-grey-2, 10%);
         background-color: darken($color-grey-2, 15%);
-        color: #aaa;
+        color: $color-menu-text;
         padding: 0.8em 2.5em 0.8em 1em;
 
         &:hover {
@@ -352,7 +355,7 @@ body.explorer-open {
             font-weight: 500;
             text-transform: none;
             text-align: center;
-            color: #aaa;
+            color: $color-menu-text;
 
             &:before {
                 font-size: 4em;
